# MANTI

./: LICENSE  MANTI.cabal  Session.vim
src/: Arith.hs  DFS.hs  Main.hs  Parser.hs  Print.hs  REPL.hs  Types.hs  Unify.hs
tests/: einstein.pl  list.pl  nqueens.pl  peano.pl  zurg.pl
