name:                MANTI
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            http://github.com/osa1/MANTI
license:             BSD3
license-file:        LICENSE
author:              Ömer Sinan Ağacan
maintainer:          omeragacan@gmail.com
-- copyright:
category:            Language
build-type:          Simple
cabal-version:       >=1.8

executable MANTI
  main-is:           Main.hs
  ghc-options:       -O2
  -- other-modules:
  build-depends:       base ==4.6.*
                     , HUnit ==1.2.*
                     , containers ==0.5.*
                     , mtl ==2.1.*
                     , parsec ==3.1.*
                     , directory ==1.2.*
                     , process ==1.1.*
  hs-source-dirs:      src
